--- a/split_swing_into_frames.ipynb
+++ b/split_swing_into_frames.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 66,
    "id": "c61a454e",
    "metadata": {
     "pycharm": {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 67,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 68,
    "id": "4e2db0c5",
    "metadata": {
     "pycharm": {
@@ -169,7 +169,7 @@
        "[206 rows x 3 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,33 +211,39 @@
     "        return correct_midpoint,correct_arm_angle\n",
     "    \n",
     "    elif swing_part=='top':\n",
-    "        head_point_current=[data['nose_y'].iloc[swing_part_id],data['nose_x'].iloc[swing_part_id]]\n",
-    "        head_point_address=[data['nose_y'].iloc[address_frame],data['nose_x'].iloc[address_frame] ]\n",
+    "        head_point_current=np.array([data['nose_y'].iloc[swing_part_id],data['nose_x'].iloc[swing_part_id]])\n",
+    "        head_point_address=np.array([data['nose_y'].iloc[address_frame],data['nose_x'].iloc[address_frame]])\n",
     "        correct_pelvis=0\n",
     "        correct_head=0\n",
     "        correct_arm_angle=0\n",
-    "        if 165<=pelvis_angle<=178:\n",
+    "        if 165<=pelvis_angle<=180:\n",
     "            correct_pelvis=1\n",
     "        if 130<=arm_angle<=150:\n",
     "            correct_arm_angle=1\n",
-    "        if abs(np.sum(np.square(head_point_current-head_point_address)))<=25:\n",
+    "        if np.array(head_point_address).shape==(2,1):\n",
+    "            head_point_address=head_point_address.flatten()\n",
+    "            head_point_current=head_point_current.flatten()\n",
+    "        if np.linalg.norm(head_point_current-head_point_address)<=20:\n",
     "            correct_head=1\n",
     "        return correct_pelvis,correct_head,correct_arm_angle\n",
     "\n",
     "    elif swing_part=='contact':\n",
-    "        head_point_current=[data['nose_y'].iloc[swing_part_id],data['nose_x'].iloc[swing_part_id]]\n",
-    "        head_point_address=[data['nose_y'].iloc[address_frame],data['nose_x'].iloc[address_frame] ]\n",
+    "        head_point_current=np.array([data['nose_y'].iloc[swing_part_id],data['nose_x'].iloc[swing_part_id]])\n",
+    "        head_point_address=np.array([data['nose_y'].iloc[address_frame],data['nose_x'].iloc[address_frame]])\n",
     "        correct_shoulder_ankle=0\n",
     "        correct_head=0\n",
     "        correct_knee_angle=0\n",
     "        correct_arm_angle=0\n",
-    "        if np.linalg.norm(np.array(head_point_current)-np.array(head_point_address))<=20:\n",
+    "        if np.array(head_point_address).shape==(2,1):\n",
+    "            head_point_address=head_point_address.flatten()\n",
+    "            head_point_current=head_point_current.flatten()\n",
+    "        if np.linalg.norm(head_point_current-head_point_address)<=20:\n",
     "            correct_head=1\n",
     "        if left_ankle_x-left_shoulder_x<0:\n",
     "            correct_shoulder_ankle=1\n",
-    "        if 165<=knee_angle<=178:\n",
+    "        if 165<=knee_angle<=180:\n",
     "            correct_knee_angle=1\n",
-    "        if 165<=arm_angle<=178:\n",
+    "        if 165<=arm_angle<=180:\n",
     "            correct_arm_angle=1\n",
     "        return correct_head,correct_shoulder_ankle,correct_knee_angle,correct_arm_angle\n",
     "\n",
@@ -248,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,11 +283,14 @@
     "        cv2.putText(frame, f'Shoulders inclination: {data[\"shoulders_inclination\"].iloc[swing_part_id]:.2f}', (10, 20), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 0), 2)\n",
     "        cv2.putText(frame, f'Hips inclination: {data[\"hips_inclination\"].iloc[swing_part_id]:.2f}', (10, 45), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 0), 2)\n",
     "\n",
-    "        if correct_knee_angle==0:\n",
+    "        if correct_knee_angle==1:\n",
     "            cv2.putText(frame, f'Knee Angle: {data[\"knee_angle\"].iloc[swing_part_id]:.2f}', (10, 70), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
+    "            # cv2.line(frame, (data['left_hip_x'].iloc[swing_part_id], data['left_hip_y'].iloc[swing_part_id]), (data['left_knee_x'].iloc[swing_part_id], data['left_knee_x'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
+    "            # cv2.line(frame, (data['left_knee_x'].iloc[swing_part_id], data['left_knee_y']).iloc[swing_part_id], (data['left_ankle_x'].iloc[swing_part_id], data['left_ankle_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
     "        else:\n",
     "            cv2.putText(frame, f'Knee Angle: {data[\"knee_angle\"].iloc[swing_part_id]:.2f}', (10, 70), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
-    "\n",
+    "            # cv2.line(frame, (data['left_hip_x'].iloc[swing_part_id], data['left_hip_y'].iloc[swing_part_id]), (data['left_knee_x'].iloc[swing_part_id], data['left_knee_x'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
+    "            # cv2.line(frame, (data['left_knee_x'].iloc[swing_part_id], data['left_knee_y']).iloc[swing_part_id], (data['left_ankle_x'].iloc[swing_part_id], data['left_ankle_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
     "\n",
     "        if correct_shoulder_ankle==0:\n",
     "            cv2.circle(frame, (data['left_ankle_x'].iloc[swing_part_id], data['left_ankle_y'].iloc[swing_part_id]), 6, (0, 255, 0), -1)\n",
@@ -291,8 +300,7 @@
     "            cv2.line(frame, (data['left_ankle_x'].iloc[swing_part_id], data['left_ankle_y'].iloc[swing_part_id]), (data['left_ankle_x'].iloc[swing_part_id], data['left_ankle_y'].iloc[swing_part_id] - 200),  (0, 0, 255), 2)\n",
     "        \n",
     "\n",
-    "        \n",
-    "        if correct_head==1:\n",
+    "        if correct_head==0:\n",
     "            cv2.line(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), (data['nose_x'].iloc[swing_part_id], data['nose_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
     "            cv2.circle(frame, (data['nose_x'].iloc[swing_part_id], data['nose_y'].iloc[swing_part_id]), 6, (0,0,255), -1)\n",
     "            cv2.circle(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), 20, (0, 0, 255), 2)\n",
@@ -315,33 +323,52 @@
     "\n",
     "        \n",
     "    elif swing_part=='top':\n",
+    "        correct_pelvis,correct_head,correct_arm_angle=evaluate_correctness(data, swing_part,swing_part_id,address_frame)\n",
+    "\n",
     "        cv2.putText(frame, f'Shoulders inclination: {data[\"shoulders_inclination\"].iloc[swing_part_id]:.2f}', (10, 20), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
     "        cv2.line(frame, (data['right_shoulder_x'].iloc[swing_part_id], data['right_shoulder_y'].iloc[swing_part_id]), (data['right_shoulder_x'].iloc[swing_part_id] + 100, data['right_shoulder_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
     "        cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['right_shoulder_x'].iloc[swing_part_id], data['right_shoulder_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
     "\n",
     "        cv2.putText(frame, f'Hips inclination: {data[\"hips_inclination\"].iloc[swing_part_id]:.2f}', (10, 45), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 0), 2)\n",
     "\n",
-    "        cv2.putText(frame, f'Knee Angle: {data[\"knee_angle\"].iloc[swing_part_id]:.2f}', (10, 70), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 0, 255), 2)\n",
+    "        # cv2.putText(frame, f'Knee Angle: {data[\"knee_angle\"].iloc[swing_part_id]:.2f}', (10, 70), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 0, 255), 2)\n",
     "\n",
-    "        cv2.putText(frame, f'Pelvis Angle: {data[\"pelvis_angle\"].iloc[swing_part_id]:.2f}', (10, 95), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 150, 255), 2)\n",
+    "        if correct_pelvis==0:\n",
+    "            cv2.putText(frame, f'Pelvis Angle: {data[\"pelvis_angle\"].iloc[swing_part_id]:.2f}', (10, 95), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
+    "        else:\n",
+    "            cv2.putText(frame, f'Pelvis Angle: {data[\"pelvis_angle\"].iloc[swing_part_id]:.2f}', (10, 95), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
     "\n",
     "\n",
-    "        cv2.putText(frame, f'Arm Angle: {data[\"arm_angle\"].iloc[swing_part_id]:.2f}', (10, 120), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (128, 0, 128), 2)\n",
-    "        cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (128, 0, 128), 2)\n",
-    "        cv2.line(frame, (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (data['left_wrist_x'].iloc[swing_part_id], data['left_wrist_y'].iloc[swing_part_id]), (128, 0, 128), 2)\n",
+    "        if correct_head==0:\n",
+    "            cv2.line(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), (data['nose_x'].iloc[swing_part_id], data['nose_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
+    "            cv2.circle(frame, (data['nose_x'].iloc[swing_part_id], data['nose_y'].iloc[swing_part_id]), 6, (0,0,255), -1)\n",
+    "            cv2.circle(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), 20, (0, 0, 255), 2)\n",
+    "            cv2.circle(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), 6, (0, 0, 255), -1)\n",
+    "        else:\n",
+    "            cv2.line(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), (data['nose_x'].iloc[swing_part_id], data['nose_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
+    "            cv2.circle(frame, (data['nose_x'].iloc[swing_part_id], data['nose_y'].iloc[swing_part_id]), 6, (0, 255, 0), -1)\n",
+    "            cv2.circle(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), 20, (0, 255, 0), 2)\n",
+    "            cv2.circle(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), 6, (0, 255, 0), -1)\n",
+    "\n",
+    "        if correct_arm_angle==0:\n",
+    "            cv2.putText(frame, f'Arm Angle: {data[\"arm_angle\"].iloc[swing_part_id]:.2f}', (10, 120), cv2.FONT_HERSHEY_SIMPLEX, 0.7,(0, 0, 255), 2)\n",
+    "            cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
+    "            cv2.line(frame, (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (data['left_wrist_x'].iloc[swing_part_id], data['left_wrist_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
+    "        else:\n",
+    "            cv2.putText(frame, f'Arm Angle: {data[\"arm_angle\"].iloc[swing_part_id]:.2f}', (10, 120), cv2.FONT_HERSHEY_SIMPLEX, 0.7,(0, 255, 0), 2)\n",
+    "            cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
+    "            cv2.line(frame, (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (data['left_wrist_x'].iloc[swing_part_id], data['left_wrist_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
+    "\n",
     "\n",
     "        # cv2.line(frame, (data['left_ankle_x'].iloc[swing_part_id], data['left_ankle_y'].iloc[swing_part_id]), (data['left_ankle_x'].iloc[swing_part_id], data['left_ankle_y'].iloc[swing_part_id] - 200), (255, 0, 0), 2)\n",
-    "        cv2.line(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), (data['nose_x'].iloc[swing_part_id], data['nose_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
-    "        cv2.circle(frame, (data['nose_x'].iloc[swing_part_id], data['nose_y'].iloc[swing_part_id]), 6, (0,0,255), -1)\n",
-    "        cv2.circle(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), 20, (0, 0, 255), 2)\n",
-    "        cv2.circle(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), 6, (0, 0, 255), -1)\n",
+    "\n",
     "    return frame\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 72,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -390,7 +417,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9132947976878613\n"
+      "0.6127167630057804\n"
      ]
     }
    ],
@@ -402,7 +429,7 @@
     "correct_contact=0\n",
     "correct_top=0\n",
     "correct_address=0\n",
-    "swing_part='contact'\n",
+    "swing_part='top'\n",
     "folder_name = 'frames_mediapipe_'+swing_part\n",
     "full_path = os.path.join(directory_path, folder_name)\n",
     "\n",
@@ -431,7 +458,6 @@
     "        tolerance_hit=2*(gt_contact//30)\n",
     "        tolerance_top=2*(gt_top//30)\n",
     "        tolerance_address=2*(gt_address//30)\n",
-    "        \n",
     "        # break\n",
     "        \n",
     "\n",
@@ -487,6 +513,27 @@
     "elif swing_part == 'top':\n",
     "    accuracy_top=correct_top/all\n",
     "    print(accuracy_top)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.array([[2],[2]])\n",
+    "a.shape"
    ]
   },
   {
