added printing correctness

--- a/split_swing_into_frames.ipynb
+++ b/split_swing_into_frames.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 105,
    "id": "c61a454e",
    "metadata": {
     "pycharm": {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 106,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 107,
    "id": "4e2db0c5",
    "metadata": {
     "pycharm": {
@@ -169,7 +169,7 @@
        "[206 rows x 3 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,8 +326,8 @@
     "        correct_pelvis,correct_head,correct_arm_angle=evaluate_correctness(data, swing_part,swing_part_id,address_frame)\n",
     "\n",
     "        cv2.putText(frame, f'Shoulders inclination: {data[\"shoulders_inclination\"].iloc[swing_part_id]:.2f}', (10, 20), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
-    "        cv2.line(frame, (data['right_shoulder_x'].iloc[swing_part_id], data['right_shoulder_y'].iloc[swing_part_id]), (data['right_shoulder_x'].iloc[swing_part_id] + 100, data['right_shoulder_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
-    "        cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['right_shoulder_x'].iloc[swing_part_id], data['right_shoulder_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
+    "        # cv2.line(frame, (data['right_shoulder_x'].iloc[swing_part_id], data['right_shoulder_y'].iloc[swing_part_id]), (data['right_shoulder_x'].iloc[swing_part_id] + 100, data['right_shoulder_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
+    "        # cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['right_shoulder_x'].iloc[swing_part_id], data['right_shoulder_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
     "\n",
     "        cv2.putText(frame, f'Hips inclination: {data[\"hips_inclination\"].iloc[swing_part_id]:.2f}', (10, 45), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 0), 2)\n",
     "\n",
@@ -350,14 +350,14 @@
     "            cv2.circle(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), 20, (0, 255, 0), 2)\n",
     "            cv2.circle(frame, (data['nose_x'].iloc[address_frame.item()], data['nose_y'].iloc[address_frame.item()]), 6, (0, 255, 0), -1)\n",
     "\n",
-    "        if correct_arm_angle==0:\n",
-    "            cv2.putText(frame, f'Arm Angle: {data[\"arm_angle\"].iloc[swing_part_id]:.2f}', (10, 120), cv2.FONT_HERSHEY_SIMPLEX, 0.7,(0, 0, 255), 2)\n",
-    "            cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
-    "            cv2.line(frame, (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (data['left_wrist_x'].iloc[swing_part_id], data['left_wrist_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
-    "        else:\n",
-    "            cv2.putText(frame, f'Arm Angle: {data[\"arm_angle\"].iloc[swing_part_id]:.2f}', (10, 120), cv2.FONT_HERSHEY_SIMPLEX, 0.7,(0, 255, 0), 2)\n",
-    "            cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
-    "            cv2.line(frame, (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (data['left_wrist_x'].iloc[swing_part_id], data['left_wrist_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
+    "        # if correct_arm_angle==0:\n",
+    "        #     cv2.putText(frame, f'Arm Angle: {data[\"arm_angle\"].iloc[swing_part_id]:.2f}', (10, 120), cv2.FONT_HERSHEY_SIMPLEX, 0.7,(0, 0, 255), 2)\n",
+    "        #     cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
+    "        #     cv2.line(frame, (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (data['left_wrist_x'].iloc[swing_part_id], data['left_wrist_y'].iloc[swing_part_id]), (0, 0, 255), 2)\n",
+    "        # else:\n",
+    "        #     cv2.putText(frame, f'Arm Angle: {data[\"arm_angle\"].iloc[swing_part_id]:.2f}', (10, 120), cv2.FONT_HERSHEY_SIMPLEX, 0.7,(0, 255, 0), 2)\n",
+    "        #     cv2.line(frame, (data['left_shoulder_x'].iloc[swing_part_id], data['left_shoulder_y'].iloc[swing_part_id]), (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
+    "        #     cv2.line(frame, (data['left_elbow_x'].iloc[swing_part_id], data['left_elbow_y'].iloc[swing_part_id]), (data['left_wrist_x'].iloc[swing_part_id], data['left_wrist_y'].iloc[swing_part_id]), (0, 255, 0), 2)\n",
     "\n",
     "\n",
     "        # cv2.line(frame, (data['left_ankle_x'].iloc[swing_part_id], data['left_ankle_y'].iloc[swing_part_id]), (data['left_ankle_x'].iloc[swing_part_id], data['left_ankle_y'].iloc[swing_part_id] - 200), (255, 0, 0), 2)\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 114,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -417,7 +417,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6127167630057804\n"
+      "correct pelvis angle: 1, correct head position: 1,correct arm angle 0\n"
      ]
     }
    ],
@@ -449,35 +449,38 @@
     "        data = pd.read_csv(directory_path + fl + '.csv')\n",
     "        data,address_frame,contact_frame,top_backswing_frame=split_swing(data)\n",
     "        #extract the gt from golfDB\n",
-    "        yt_id='_'.join(fl.split('_')[2::])\n",
-    "        gt_contact=test_dat[test_dat.youtube_id==yt_id].events_7.item()\n",
-    "        gt_top=test_dat[test_dat.youtube_id==yt_id].events_5.item()\n",
-    "        gt_address=15\n",
+    "        # yt_id='_'.join(fl.split('_')[2::])\n",
+    "        # gt_contact=test_dat[test_dat.youtube_id==yt_id].events_7.item()\n",
+    "        # gt_top=test_dat[test_dat.youtube_id==yt_id].events_5.item()\n",
+    "        # gt_address=15\n",
     "\n",
     "        #calculte tolerance as per golfDB paper (fps=30)\n",
-    "        tolerance_hit=2*(gt_contact//30)\n",
-    "        tolerance_top=2*(gt_top//30)\n",
-    "        tolerance_address=2*(gt_address//30)\n",
+    "        # tolerance_hit=2*(gt_contact//30)\n",
+    "        # tolerance_top=2*(gt_top//30)\n",
+    "        # tolerance_address=2*(gt_address//30)\n",
     "        # break\n",
     "        \n",
     "\n",
     "        # Processing based on swing_part value\n",
     "        if swing_part == 'address':\n",
     "            swing_part_id=max([address_frame.item()-4,0])\n",
-    "            \n",
+    "            correct_midpoint,correct_arm_angle=evaluate_correctness(data, swing_part,swing_part_id)\n",
+    "            print(f'correct wrist midpont distance: {correct_midpoint}, correct arm angle: {correct_arm_angle}')\n",
     "            cap.set(cv2.CAP_PROP_POS_FRAMES, swing_part_id)\n",
     "            ret, frame = cap.read()\n",
     "            frame=plot_points(data,frame,'address',swing_part_id)\n",
     "            frame_path =full_path+'/'+os.path.splitext(video_path)[0].split(\"/\")[1] + f'_frame_{address_frame.item()}.jpg'\n",
     "            cv2.imwrite(frame_path, frame)\n",
     "            cap.release()\n",
-    "            \n",
-    "            if gt_address - tolerance_address <= address_frame.item() <= tolerance_address + gt_address:\n",
-    "                correct_address += 1\n",
+    "            break\n",
+    "            # if gt_address - tolerance_address <= address_frame.item() <= tolerance_address + gt_address:\n",
+    "            #     correct_address += 1\n",
     "        \n",
     "        \n",
     "        elif swing_part == 'contact':\n",
     "            swing_part_id=contact_frame.item()\n",
+    "            correct_head,correct_shoulder_ankle,correct_knee_angle,correct_arm_angle=evaluate_correctness(data, swing_part,swing_part_id,address_frame)\n",
+    "            print(f'correct head position: {correct_head}, correct shoulder ankle distance: {correct_shoulder_ankle}, correct knee angle: {correct_knee_angle}, correct arm angle: {correct_arm_angle}')\n",
     "            cap.set(cv2.CAP_PROP_POS_FRAMES, swing_part_id)\n",
     "            ret, frame = cap.read()\n",
     "\n",
@@ -486,38 +489,40 @@
     "            cv2.imwrite(frame_path, frame)\n",
     "\n",
     "            cap.release()\n",
-    "\n",
-    "            if gt_contact - tolerance_hit <= contact_frame.item() <= tolerance_hit + gt_contact:\n",
-    "                correct_contact += 1\n",
+    "            break\n",
+    "            # if gt_contact - tolerance_hit <= contact_frame.item() <= tolerance_hit + gt_contact:\n",
+    "            #     correct_contact += 1\n",
     "\n",
     "        elif swing_part == 'top':\n",
     "            swing_part_id=top_backswing_frame.item()\n",
+    "            correct_pelvis,correct_head,correct_arm_angle=evaluate_correctness(data, swing_part,swing_part_id,address_frame)\n",
+    "            print(f'correct pelvis angle: {correct_pelvis}, correct head position: {correct_head},correct arm angle {correct_arm_angle}')\n",
     "            cap.set(cv2.CAP_PROP_POS_FRAMES, swing_part_id)\n",
     "            ret, frame = cap.read()\n",
     "            frame=plot_points(data,frame,swing_part,swing_part_id,address_frame)\n",
     "            frame_path =full_path+ '/'+os.path.splitext(video_path)[0].split(\"/\")[1] + f'_frame_{top_backswing_frame.item()}.jpg'\n",
     "            cv2.imwrite(frame_path, frame)\n",
     "            cap.release()\n",
-    "            if gt_top-tolerance_top<=top_backswing_frame.item()<=tolerance_top+gt_top:\n",
-    "                correct_top+=1\n",
-    "\n",
+    "            # if gt_top-tolerance_top<=top_backswing_frame.item()<=tolerance_top+gt_top:\n",
+    "            #     correct_top+=1\n",
+    "            break\n",
     "        \n",
     "    # except:\n",
     "    #     continue\n",
-    "if swing_part == 'address':\n",
-    "    accuracy_address=correct_address/all\n",
-    "    print(accuracy_address)\n",
-    "elif swing_part == 'contact':\n",
-    "    accuracy_contact=correct_contact/all\n",
-    "    print(accuracy_contact)\n",
-    "elif swing_part == 'top':\n",
-    "    accuracy_top=correct_top/all\n",
-    "    print(accuracy_top)\n"
+    "# if swing_part == 'address':\n",
+    "#     accuracy_address=correct_address/all\n",
+    "#     print(accuracy_address)\n",
+    "# elif swing_part == 'contact':\n",
+    "#     accuracy_contact=correct_contact/all\n",
+    "#     print(accuracy_contact)\n",
+    "# elif swing_part == 'top':\n",
+    "#     accuracy_top=correct_top/all\n",
+    "#     print(accuracy_top)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +531,7 @@
        "(2, 1)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
