--- a/MediaPipe_single_video.ipynb
+++ b/MediaPipe_single_video.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTTXZlDYZZOeT4toWpm5ld",
+      "authorship_tag": "ABX9TyNBgHWEomJjzyaxpAzUZTh1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,68 +30,6 @@
       "cell_type": "code",
       "source": [
         "!pip install mediapipe\n",
-        "# Use !wget to download a specific file\n",
-        "!wget https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos/output_video_-M5SITXMA2Y.mp4"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DPRK77pQX7IN",
-        "outputId": "20e55122-ac42-4cd6-eb4c-24bc7708a4fe"
-      },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-12-11 20:02:39--  https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos/output_video_-M5SITXMA2Y.mp4\n",
-            "Resolving github.com (github.com)... 140.82.112.4\n",
-            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos/output_video_-M5SITXMA2Y.mp4 [following]\n",
-            "--2023-12-11 20:02:39--  https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos/output_video_-M5SITXMA2Y.mp4\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 254614 (249K) [application/octet-stream]\n",
-            "Saving to: ‘output_video_-M5SITXMA2Y.mp4’\n",
-            "\n",
-            "output_video_-M5SIT 100%[===================>] 248.65K  --.-KB/s    in 0.05s   \n",
-            "\n",
-            "2023-12-11 20:02:39 (5.10 MB/s) - ‘output_video_-M5SITXMA2Y.mp4’ saved [254614/254614]\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Cgx3G764f7jU",
-        "outputId": "0e22376a-65d5-486b-f964-c290edf9f8c8"
-      },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: destination path '23206-final-pose-estimation-for-swing-improvement' already exists and is not an empty directory.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import cv2\n",
         "import mediapipe as mp\n",
         "import sys\n",
@@ -101,36 +39,102 @@
         "import datetime"
       ],
       "metadata": {
-        "id": "VMiYkZrAq3W8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DPRK77pQX7IN",
+        "outputId": "02b099a0-e3a3-4899-957d-b2005bcc9e55"
       },
-      "execution_count": 31,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: mediapipe in /usr/local/lib/python3.10/dist-packages (0.10.8)\n",
+            "Requirement already satisfied: absl-py in /usr/local/lib/python3.10/dist-packages (from mediapipe) (1.4.0)\n",
+            "Requirement already satisfied: attrs>=19.1.0 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (23.1.0)\n",
+            "Requirement already satisfied: flatbuffers>=2.0 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (23.5.26)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (from mediapipe) (3.7.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from mediapipe) (1.23.5)\n",
+            "Requirement already satisfied: opencv-contrib-python in /usr/local/lib/python3.10/dist-packages (from mediapipe) (4.8.0.76)\n",
+            "Requirement already satisfied: protobuf<4,>=3.11 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (3.20.3)\n",
+            "Requirement already satisfied: sounddevice>=0.4.4 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (0.4.6)\n",
+            "Requirement already satisfied: CFFI>=1.0 in /usr/local/lib/python3.10/dist-packages (from sounddevice>=0.4.4->mediapipe) (1.16.0)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (1.2.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (4.46.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (1.4.5)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (23.2)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (9.4.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (3.1.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib->mediapipe) (2.8.2)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from CFFI>=1.0->sounddevice>=0.4.4->mediapipe) (2.21)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib->mediapipe) (1.16.0)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "sys.path.append('/content/23206-final-pose-estimation-for-swing-improvement')\n",
-        "input_folder = '/content/23206-final-pose-estimation-for-swing-improvement'+'cropped_videos'"
+        "input = 'file'\n",
+        "\n",
+        "if input == 'file':\n",
+        "  # SET AN INPUT FILE in the folder cropped_videos\n",
+        "  input_file = 'output_video_-M5SITXMA2Y.mp4'\n",
+        "  csv_file_name = f'{os.path.splitext(input_file)[0]}.csv'\n",
+        "  output_video_name = f'{os.path.splitext(input_file)[0]}_output.mp4'\n",
+        "  !wget 'https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos/' + input_file\n",
+        "\n",
+        "elif input == 'folder':\n",
+        "  !git clone https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement\n",
+        "  sys.path.append('/content/23206-final-pose-estimation-for-swing-improvement/cropped_videos')\n",
+        "  input_folder = '/content/23206-final-pose-estimation-for-swing-improvement'+'cropped_videos' #download the folder cropped_videos\n",
+        "\n",
+        "else:\n",
+        "  print(\"You have just two options: 'file' or 'folder'\")"
       ],
       "metadata": {
-        "id": "OMUATqmluSPW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cgx3G764f7jU",
+        "outputId": "270cca50-42d2-4649-e19b-e1d71160500a"
       },
-      "execution_count": 33,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Input and output files\n",
-        "input_file = 'cropped_videos/output_video_-M5SITXMA2Y'\n",
-        "csv_file_name = f'{os.path.splitext(input_file)[0]}.csv'\n",
-        "output_video_name = f'{os.path.splitext(input_file)[0]}_output.mp4'"
-      ],
-      "metadata": {
-        "id": "YXbx7qhVq92r"
-      },
-      "execution_count": 34,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-12-11 21:34:02--  https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos/\n",
+            "Resolving github.com (github.com)... 140.82.113.4\n",
+            "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+            "Location: https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/tree/main/cropped_videos [following]\n",
+            "--2023-12-11 21:34:02--  https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/tree/main/cropped_videos\n",
+            "Reusing existing connection to github.com:443.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 23090 (23K) [text/plain]\n",
+            "Saving to: ‘index.html’\n",
+            "\n",
+            "index.html          100%[===================>]  22.55K  --.-KB/s    in 0.06s   \n",
+            "\n",
+            "2023-12-11 21:34:03 (368 KB/s) - ‘index.html’ saved [23090/23090]\n",
+            "\n",
+            "--2023-12-11 21:34:03--  http://+/\n",
+            "Resolving + (+)... failed: Name or service not known.\n",
+            "wget: unable to resolve host address ‘+’\n",
+            "--2023-12-11 21:34:03--  http://input_file/\n",
+            "Resolving input_file (input_file)... failed: Name or service not known.\n",
+            "wget: unable to resolve host address ‘input_file’\n",
+            "FINISHED --2023-12-11 21:34:03--\n",
+            "Total wall clock time: 0.7s\n",
+            "Downloaded: 1 files, 23K in 0.06s (368 KB/s)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -147,7 +151,7 @@
       "metadata": {
         "id": "R2ojh4YzyVqq"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -177,7 +181,7 @@
       "metadata": {
         "id": "TRbMc0pgycUQ"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -191,7 +195,7 @@
       "metadata": {
         "id": "VO2Te8KZyfNW"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -351,7 +355,7 @@
       "metadata": {
         "id": "HTEvFjR8yhGJ"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -361,24 +365,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 309
+          "base_uri": "https://localhost:8080/"
         },
         "id": "resx4N8iC9ZL",
-        "outputId": "ab84705a-2aa0-4c5f-f154-1c3524abc46a"
+        "outputId": "5e833db9-5a62-4dd6-c114-0d4ad30593be"
       },
-      "execution_count": 35,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-35-c8b58adfeae9>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprocess_video\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcsv_file_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_video_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-10-427855e19391>\u001b[0m in \u001b[0;36mprocess_video\u001b[0;34m(input_file, csv_file_name, output_video_name)\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mmp_pose\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolutions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m   \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsv_file_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mwriter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     writer.writerow([\"video_timestamp\", \"shoulders_inclination\", \"hips_inclination\",\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'cropped_videos/output_video_-M5SITXMA2Y.csv'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Null.Frames\n"
           ]
         }
       ]
