--- a/MediaPipe.ipynb
+++ b/MediaPipe.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOkY5BHKuYCmTRUroF6wkjQ",
+      "authorship_tag": "ABX9TyMRzlgvlug7dGdC3sNI3IaO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/blob/main/MediaPipe_single_video.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/blob/main/MediaPipe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -44,7 +43,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49966c6c-63eb-4030-d395-bcf9f87b7b27"
+        "outputId": "d72fd20b-314d-4335-f3bb-02fc4e0fff78"
       },
       "execution_count": 1,
       "outputs": [
@@ -54,7 +53,7 @@
           "text": [
             "Collecting mediapipe\n",
             "  Downloading mediapipe-0.10.8-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (34.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.5/34.5 MB\u001b[0m \u001b[31m45.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.5/34.5 MB\u001b[0m \u001b[31m44.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: absl-py in /usr/local/lib/python3.10/dist-packages (from mediapipe) (1.4.0)\n",
             "Requirement already satisfied: attrs>=19.1.0 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (23.1.0)\n",
             "Requirement already satisfied: flatbuffers>=2.0 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (23.5.26)\n",
@@ -114,15 +113,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cgx3G764f7jU",
-        "outputId": "3b3747e0-f910-4788-8de3-789d11c02fbc"
+        "outputId": "290df9c7-b246-426c-8fdf-f2b6e0c3bf40"
       },
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path '23206-final-pose-estimation-for-swing-improvement' already exists and is not an empty directory.\n"
+            "--2023-12-12 09:42:51--  https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos/output_video_-M5SITXMA2Y.mp4\n",
+            "Resolving github.com (github.com)... 140.82.114.4\n",
+            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos/output_video_-M5SITXMA2Y.mp4 [following]\n",
+            "--2023-12-12 09:42:51--  https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos/output_video_-M5SITXMA2Y.mp4\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 254614 (249K) [application/octet-stream]\n",
+            "Saving to: ‘output_video_-M5SITXMA2Y.mp4.1’\n",
+            "\n",
+            "output_video_-M5SIT 100%[===================>] 248.65K  --.-KB/s    in 0.04s   \n",
+            "\n",
+            "2023-12-12 09:42:51 (6.23 MB/s) - ‘output_video_-M5SITXMA2Y.mp4.1’ saved [254614/254614]\n",
+            "\n"
           ]
         }
       ]
@@ -186,6 +200,7 @@
         "                             \"right_hip X\", \"right_hip Y\",\n",
         "                             \"left_hip X\", \"left_hip Y\",\n",
         "                             \"right_knee X\", \"right_knee Y\",\n",
+        "                             \"left_knee X\", \"left_knee Y\",\n",
         "                             \"right_ankle X\", \"right_ankle Y\",\n",
         "                             \"left_ankle X\", \"left_ankle Y\",\n",
         "                             \"midpoint X\", \"midpoint Y\"])\n",
@@ -255,6 +270,7 @@
         "                                         int(right_hip.x * w), int(right_hip.y * h),\n",
         "                                         int(left_hip.x * w), int(left_hip.y * h),\n",
         "                                         int(right_knee.x * w), int(right_knee.y * h),\n",
+        "                                         int(left_knee.x * w), int(left_knee.y * h),\n",
         "                                         int(right_ankle.x * w), int(right_ankle.y * h),\n",
         "                                         int(left_ankle.x * w), int(left_ankle.y * h),\n",
         "                                         int(midpoint_x * w), int(midpoint_y * h)])\n",
@@ -320,7 +336,7 @@
       "metadata": {
         "id": "wCOFK3VT21KD"
       },
-      "execution_count": 21,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -346,198 +362,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "023ccddf-8f57-4b5c-f25e-8bce07b1e6fc"
+        "outputId": "778b79ea-fa69-4e9f-c56d-959c5ce6f747"
       },
-      "execution_count": 22,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "Null.Frames\n",
-            "An error occurred: 'NoneType' object has no attribute 'landmark'\n",
-            "Null.Frames\n",
             "Null.Frames\n"
           ]
         }
