handle with zip files

--- a/MediaPipe.ipynb
+++ b/MediaPipe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRzlgvlug7dGdC3sNI3IaO",
+      "authorship_tag": "ABX9TyMNJX/UuV5MpUkCKpJecOsT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,14 +36,16 @@
         "import math\n",
         "import csv\n",
         "import os\n",
-        "import datetime"
+        "import datetime\n",
+        "import zipfile\n",
+        "import requests"
       ],
       "metadata": {
         "id": "DPRK77pQX7IN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d72fd20b-314d-4335-f3bb-02fc4e0fff78"
+        "outputId": "8fb43131-abe3-41d9-9587-79d337c2a266"
       },
       "execution_count": 1,
       "outputs": [
@@ -53,7 +55,7 @@
           "text": [
             "Collecting mediapipe\n",
             "  Downloading mediapipe-0.10.8-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (34.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.5/34.5 MB\u001b[0m \u001b[31m44.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.5/34.5 MB\u001b[0m \u001b[31m45.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: absl-py in /usr/local/lib/python3.10/dist-packages (from mediapipe) (1.4.0)\n",
             "Requirement already satisfied: attrs>=19.1.0 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (23.1.0)\n",
             "Requirement already satisfied: flatbuffers>=2.0 in /usr/local/lib/python3.10/dist-packages (from mediapipe) (23.5.26)\n",
@@ -83,22 +85,21 @@
     {
       "cell_type": "code",
       "source": [
-        "input = 'file'\n",
+        "input = 'folder'\n",
+        "\n",
+        "url = f\"https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos.zip\"\n",
+        "!wget {url}\n",
+        "!unzip cropped_videos.zip\n",
+        "!rm cropped_videos.zip\n",
         "\n",
         "if input == 'file':\n",
         "  # SET AN INPUT FILE in the folder cropped_videos\n",
-        "  input_file = 'output_video_-M5SITXMA2Y.mp4'\n",
-        "  url = f\"https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos/{input_file}\"\n",
-        "  !wget {url}\n",
-        "\n",
+        "  input_file = 'cropped_videos/output_video_-M5SITXMA2Y.mp4'\n",
         "  csv_file_name = f'{os.path.splitext(input_file)[0]}.csv'\n",
         "  output_video_name = f'{os.path.splitext(input_file)[0]}_output.mp4'\n",
         "\n",
         "elif input == 'folder':\n",
-        "  !git clone https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement\n",
-        "  path = '/content/23206-final-pose-estimation-for-swing-improvement/cropped_videos'\n",
-        "  sys.path.append(path)\n",
-        "  input_folder = path #download the folder cropped_videos\n",
+        "  input_folder = 'cropped_videos'\n",
         "  output_folder_videos = 'result_videos'\n",
         "  output_folder_csv = 'result_statistics'\n",
         "  # Create output folders if they don't exist\n",
@@ -113,30 +114,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cgx3G764f7jU",
-        "outputId": "290df9c7-b246-426c-8fdf-f2b6e0c3bf40"
+        "outputId": "a4417746-1e35-4683-b8bd-4e1cb4a72630"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-12-12 09:42:51--  https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos/output_video_-M5SITXMA2Y.mp4\n",
-            "Resolving github.com (github.com)... 140.82.114.4\n",
-            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+            "--2023-12-12 14:07:52--  https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos.zip\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos/output_video_-M5SITXMA2Y.mp4 [following]\n",
-            "--2023-12-12 09:42:51--  https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos/output_video_-M5SITXMA2Y.mp4\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.111.133, 185.199.108.133, ...\n",
+            "Location: https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos.zip [following]\n",
+            "--2023-12-12 14:07:52--  https://raw.githubusercontent.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/main/cropped_videos.zip\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 254614 (249K) [application/octet-stream]\n",
-            "Saving to: ‘output_video_-M5SITXMA2Y.mp4.1’\n",
+            "Length: 49317746 (47M) [application/zip]\n",
+            "Saving to: ‘cropped_videos.zip’\n",
             "\n",
-            "output_video_-M5SIT 100%[===================>] 248.65K  --.-KB/s    in 0.04s   \n",
+            "cropped_videos.zip  100%[===================>]  47.03M   206MB/s    in 0.2s    \n",
             "\n",
-            "2023-12-12 09:42:51 (6.23 MB/s) - ‘output_video_-M5SITXMA2Y.mp4.1’ saved [254614/254614]\n",
-            "\n"
+            "2023-12-12 14:07:52 (206 MB/s) - ‘cropped_videos.zip’ saved [49317746/49317746]\n",
+            "\n",
+            "Archive:  cropped_videos.zip\n",
+            "replace cropped_videos/output_video__qtYF0FJBWo.mp4? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
           ]
         }
       ]
@@ -336,7 +339,7 @@
       "metadata": {
         "id": "wCOFK3VT21KD"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +367,7 @@
         },
         "outputId": "778b79ea-fa69-4e9f-c56d-959c5ce6f747"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
