handle with ziped folder

--- a/Yolov7_Pose.ipynb
+++ b/Yolov7_Pose.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOHUwoY/Gr8BjnsU1jcWrj",
+      "authorship_tag": "ABX9TyMVPUgOLTCdz6zM8hbeJzC4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -94,28 +94,27 @@
       "metadata": {
         "id": "pHJ7G_ElRNph"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "input = 'file'\n",
+        "input = 'folder'\n",
+        "\n",
+        "url = f\"https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos.zip\"\n",
+        "!wget {url}\n",
+        "!unzip cropped_videos.zip\n",
+        "!rm cropped_videos.zip\n",
         "\n",
         "if input == 'file':\n",
         "  # SET AN INPUT FILE in the folder cropped_videos\n",
-        "  input_file = 'output_video_-M5SITXMA2Y.mp4'\n",
-        "  url = f\"https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement/raw/main/cropped_videos/{input_file}\"\n",
-        "  !wget {url}\n",
-        "\n",
+        "  input_file = 'cropped_videos/output_video_-M5SITXMA2Y.mp4'\n",
         "  csv_file_name = f'{os.path.splitext(input_file)[0]}.csv'\n",
         "  output_video_name = f'{os.path.splitext(input_file)[0]}_output.mp4'\n",
         "\n",
         "elif input == 'folder':\n",
-        "  !git clone https://github.com/Strojove-uceni/23206-final-pose-estimation-for-swing-improvement\n",
-        "  path = '/content/23206-final-pose-estimation-for-swing-improvement/cropped_videos'\n",
-        "  sys.path.append(path)\n",
-        "  input_folder = path #download the folder cropped_videos\n",
+        "  input_folder = 'cropped_videos'\n",
         "  output_folder_videos = 'result_videos'\n",
         "  output_folder_csv = 'result_statistics'\n",
         "  # Create output folders if they don't exist\n",
@@ -132,7 +131,7 @@
         "id": "xtdCfGTTP35n",
         "outputId": "f4c4911d-9453-4830-adf7-a7faf0ab210d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +445,7 @@
       "metadata": {
         "id": "T5WMMjq0QDIz"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -472,7 +471,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
